...
    "Bare opptaket" : {

    },
    "Bare teksten" : {

    },
    "Eksporter alle opptak" : {

    },
    "fróði" : {

    },
    "Fróði endrer navnet overalt i teksten. Gi to personer samme navn hvis det er samme person." : {
...
    "Ikke med i zip-filen" : {

    },
    "Ingen opptak ennå" : {

    },
    "Lisenser" : {

    },
    "Listen viser datoen hvis feltet er tomt." : {

    },
    "Navn og tekst blir ikke lagret" : {
...
